services/service-c/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-frontend-service
spec:
  selector:
    app: react-frontend
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
