services/service-c/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-a-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: dev-service-c.quik.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-frontend-service
                port:
                  number: 80
  tls:
    - hosts:
        - dev-service-c.quik.com
      secretName: quik-tls
